try to improve: recover consume message related codes
