# main.go
@@ -33,7 +33,7 @@ import (
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
-// @host petstore.swagger.io
+// @host localhost
 // @BasePath /v1
 func main() {
 	//init logger
@@ -65,10 +65,9 @@ func main() {
 	r := gin.New()
 	r.POST("/v1/push_messages", api.WrapperGinHandleFunc(handler.PushMessage))
 	r.POST("/v1/batch_push_messages", api.WrapperGinHandleFunc(handler.BatchPushMessage))
+	r.POST("/v1/batch_push_messages_async", api.WrapperGinHandleFunc(handler.BatchPushMessageAsync))
 	r.POST("/v1/push_messages_for_all", api.WrapperGinHandleFunc(handler.PushMessageForAllSpecificClient))
-	//todo
-	//api.HandleFunc("/v1/set_token", handler.SetUserPushToken)
-	//api.HandleFunc("/v1/batch_push_messages_async", handler.BatchPushMessageInQueue)
+
 	// health
 	//api.HandleFunc("/health", handler.Health)
 
